--- a/attendandroidapp/app/src/main/res/layout/admin.xml
+++ b/attendandroidapp/app/src/main/res/layout/admin.xml
@@ -10,7 +10,7 @@
         android:layout_height="150dp"
         android:id="@+id/btn4"
         android:layout_marginTop="100dp"
-        android:text="로그아웃>>"/>
+        android:text="버전>>"/>
 
     <Button
         android:layout_width="match_parent"
