--- a/attendandroidapp/app/src/main/res/layout/attend.xml
+++ b/attendandroidapp/app/src/main/res/layout/attend.xml
@@ -7,9 +7,7 @@
     <Spinner
         android:layout_width="match_parent"
         android:layout_height="100dp"
-
-        android:id="@+id/spinner1"
-        android:background="#9DD2D8" />
+        android:id="@+id/spinner1" />
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="100dp"
@@ -36,6 +34,7 @@
         android:layout_width="150dp"
         android:layout_height="80dp"
         android:layout_gravity="center"
-        android:text="출석기록 보기"/>
+        android:text="출석기록 보기"
+        android:id="@+id/record_btn"/>
 
 </LinearLayout>
