--- a/attendandroidapp/app/src/main/res/values/colors.xml
+++ b/attendandroidapp/app/src/main/res/values/colors.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
+    <color name="colorPrimary">#79A09C</color>
+    <color name = "colorFRAC">#A3F0FF</color>
+    <color name="colorPrimaryDark">#E5E5E8</color>
     <color name="colorAccent">#D81B60</color>
 </resources>
