--- a/fragment_done/Fragmenttest1/app/src/main/res/layout/fragment_notice.xml
+++ b/fragment_done/Fragmenttest1/app/src/main/res/layout/fragment_notice.xml
@@ -5,9 +5,46 @@
     android:layout_height="match_parent">
     <TextView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="500dp"
         android:gravity="center"
         android:textSize="50dp"
         android:text="Notice"/>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="horizontal"
+        android:layout_weight="5"
+        >
+
+        <Button
+            android:id="@+id/time_btn"
+            android:layout_weight="1"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="#03A9F4"
+            android:text="시간표"
+            android:textColor="#000000"
+            />
+
+        <Button
+            android:id="@+id/home_btn"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="#03A9F4"
+            android:text="home"
+            android:layout_weight="1"
+            android:textColor="#000000" />
+
+        <Button
+            android:id="@+id/board_btn"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="#03A9F4"
+            android:text="게시판"
+            android:layout_weight="1"
+            android:textColor="#000000" />
+
+    </LinearLayout>
 
 </LinearLayout>
