--- a/FRACapp/app/src/main/res/layout/activity_main.xml
+++ b/FRACapp/app/src/main/res/layout/activity_main.xml
@@ -6,44 +6,16 @@
     android:orientation="vertical"
     tools:context=".MainActivity">
 
-    <LinearLayout
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:layout_height="500dp"
+        android:orientation="vertical"
+        android:id="@+id/frame">
 
-        <Button
-            android:layout_width="200dp"
-            android:layout_height="200dp"
-            android:id="@+id/attend_btn"
-            android:text="출석체크"/>
 
-        <Button
-            android:layout_width="200dp"
-            android:layout_height="200dp"
-            android:layout_marginLeft="10dp"
-            android:text="내 정보보기"
-            android:id="@+id/info_btn"/>
 
-    </LinearLayout>
+    </FrameLayout>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="300dp"
-        android:orientation="horizontal">
-
-        <Button
-            android:layout_width="200dp"
-            android:layout_height="200dp"
-            android:id="@+id/coursemanage_btn"
-            android:text="수업관리"/>
-
-        <Button
-            android:layout_width="200dp"
-            android:layout_height="200dp"
-            android:layout_marginLeft="10dp"
-            android:id="@+id/etc_btn"
-            android:text="기능"/>
-    </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -60,7 +32,7 @@
             android:background="#03A9F4"
             android:text="시간표"
             android:textColor="#000000"
-            />
+            android:onClick="clickHandler" />
 
         <Button
             android:id="@+id/home_btn"
@@ -69,7 +41,8 @@
             android:background="#03A9F4"
             android:text="home"
             android:layout_weight="1"
-            android:textColor="#000000" />
+            android:textColor="#000000"
+            android:onClick="clickHandler"/>
 
         <Button
             android:id="@+id/board_btn"
@@ -78,7 +51,8 @@
             android:background="#03A9F4"
             android:text="게시판"
             android:layout_weight="1"
-            android:textColor="#000000" />
+            android:textColor="#000000"
+            android:onClick="clickHandler"/>
 
     </LinearLayout>
 </LinearLayout>
