--- a/FRACapp/app/src/main/res/layout/boardfragment.xml
+++ b/FRACapp/app/src/main/res/layout/boardfragment.xml
@@ -1,9 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#ff0000"
-    android:id="@+id/frameLayout2">
+   >
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="#FFC107"/>
 
-</FrameLayout>
+</LinearLayout>
