--- a/FRACapp/app/src/main/res/layout/homefragment.xml
+++ b/FRACapp/app/src/main/res/layout/homefragment.xml
@@ -1,11 +1,55 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="#4CAF50"
-    android:id="@+id/frameLayout3">
+    android:layout_height="match_parent">
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="100dp"
+        android:orientation="horizontal">
+
+
+        <Button
+            android:layout_width="200dp"
+            android:layout_height="200dp"
+            android:layout_marginLeft="6dp"
+            android:id="@+id/attend_btn"
+            android:text="출석체크"/>
+
+        <Button
+            android:layout_width="200dp"
+            android:layout_height="200dp"
+            android:text="내 정보보기"
+            android:id="@+id/info_btn"/>
+
+
+    </LinearLayout>
+
+  <LinearLayout
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:orientation="horizontal">
+
+      <Button
+          android:layout_width="200dp"
+          android:layout_height="200dp"
+          android:layout_marginLeft="6dp"
+          android:id="@+id/coursemanage_btn"
+          android:text="수업관리"/>
+
+      <Button
+          android:layout_width="200dp"
+          android:layout_height="200dp"
+          android:text="기타"
+          android:id="@+id/etc_btn"/>
 
 
 
 
-</FrameLayout>
+
+
+  </LinearLayout>
+
+
+</LinearLayout>
