--- a/FRACapp/app/src/main/res/layout/timefragment.xml
+++ b/FRACapp/app/src/main/res/layout/timefragment.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:id="@+id/frameLayout1"
-    android:background="#4CAF50">
+    android:layout_height="match_parent">
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="#4CAF50"/>
 
-</FrameLayout>
+</LinearLayout>
