--- a/attendandroidapp/app/src/main/res/layout/record.xml
+++ b/attendandroidapp/app/src/main/res/layout/record.xml
@@ -8,13 +8,24 @@
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:id="@+id/spinner2"/>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
 
 
 
-      <FrameLayout
-       android:layout_width="match_parent"
-       android:layout_height="match_parent"
-       android:id="@+id/frameLayout"  />
+    </LinearLayout>
+        <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/frameLayout"  />
+
+
+
+
+
+
 
 
 </LinearLayout>
