--- a/attendandroidapp/app/src/main/res/layout/fragment1.xml
+++ b/attendandroidapp/app/src/main/res/layout/fragment1.xml
@@ -20,7 +20,7 @@
     </LinearLayout>
 <ListView
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     android:id="@+id/list1"
     android:background="#03A9F4"/>
 
