--- a/attendandroidapp/app/src/main/res/layout/list_item.xml
+++ b/attendandroidapp/app/src/main/res/layout/list_item.xml
@@ -4,20 +4,13 @@
     android:layout_height="match_parent">
 
     <TextView
-        android:layout_width="150dp"
+        android:layout_width="350dp"
         android:layout_height="50dp"
         android:layout_marginLeft="10dp"
         android:layout_marginTop="10dp"
         android:textSize="20dp"
-        android:id="@+id/name"/>
+        android:id="@+id/data"/>
 
-    <TextView
-        android:layout_width="200dp"
-        android:layout_height="50dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginLeft="10dp"
-        android:id="@+id/number"
-        android:textSize="15dp"/>
 
     <CheckBox
         android:layout_width="wrap_content"
