--- a/androidk/new_Kone/app/src/main/res/layout/activity_main.xml
+++ b/androidk/new_Kone/app/src/main/res/layout/activity_main.xml
@@ -5,10 +5,10 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context=".MainActivity">
-    <android.support.v4.view.ViewPager
+    <androidx.viewpager.widget.ViewPager
         android:id="@+id/frag_container_"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_weight="1">
-    </android.support.v4.view.ViewPager>
+    </androidx.viewpager.widget.ViewPager>
 </LinearLayout>
