--- a/attendandroidapp/app/src/main/res/menu/menu.xml
+++ b/attendandroidapp/app/src/main/res/menu/menu.xml
@@ -5,12 +5,14 @@
         <item
             android:id="@+id/login_btn"
             android:title="login"
-            app:showAsAction="always"/>
+            app:showAsAction="always"
+            android:icon="@drawable/lock"/>
 
         <item
             android:id="@+id/home_btn"
             android:title="home"
-            app:showAsAction="always"/>
+            app:showAsAction="always"
+            android:icon="@drawable/home"/>
 
 
 
