--- a/attendandroidapp/app/src/main/res/layout/login.xml
+++ b/attendandroidapp/app/src/main/res/layout/login.xml
@@ -4,19 +4,18 @@
     android:layout_height="match_parent"
     android:background="#03A9F4">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginTop="30dp"
-        android:textSize="50dp"
-        android:text="LOGIN"/>
+   <ImageView
+       android:layout_marginTop="50dp"
+       android:layout_width="200dp"
+       android:layout_height="200dp"
+       android:layout_gravity="center"
+       android:src="@drawable/face2"/>
 
     <EditText
         android:layout_width="200dp"
         android:layout_height="50dp"
+        android:layout_marginTop="50dp"
         android:layout_gravity="center"
-        android:layout_marginTop="150dp"
         android:hint="아이디"/>
 
     <EditText
