--- a/androidk/new_Kone/app/src/main/res/layout/take_photo.xml
+++ b/androidk/new_Kone/app/src/main/res/layout/take_photo.xml
@@ -12,30 +12,95 @@
         android:tooltipText="과목을 선택해주세요."
         android:id="@+id/class_choose"
         android:layout_width="match_parent"
-        android:layout_height="50dp" />
-
-    <ImageView
-        android:id="@+id/imageView1"
+        android:layout_height="50dp"
+        android:layout_weight="0.005"/>
+    <LinearLayout
+        android:layout_weight="1"
         android:layout_width="match_parent"
-        android:layout_height="274dp"
-        android:background="@drawable/capstonelogo" />
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-    <Button
-        android:id="@+id/CONFIRM"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="출석 사진 찍기"></Button>
+        <ImageView
+            android:id="@+id/imageView1"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@drawable/no_image"
+            android:layout_weight="0.9"/>
+        <EditText
+            android:id="@+id/select_class"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.1"
+            android:text="다음 과목에 대한 인증을 합니다.">
+        </EditText>
 
-    <Button
-        android:id="@+id/Send_To_JSP"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="출석 사진 인증하기" />
 
-    <Button
-        android:id="@+id/back1"
+    </LinearLayout>
+    <LinearLayout
+        android:layout_weight="1"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="돌아가기" />
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal"
+            android:layout_weight="1">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1">
+
+                <Button
+                    android:id="@+id/CONFIRM"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:text="출석 사진 찍기"></Button>
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1">
+
+                <Button
+                    android:id="@+id/Send_To_JSP"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:text="출석 사진 인증하기" />
+
+
+            </LinearLayout>
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal"
+            android:layout_weight="1">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1">
+
+                <Button
+                    android:id="@+id/back1"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:text="돌아가기" />
+
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1">
+
+            </LinearLayout>
+
+        </LinearLayout>
+    </LinearLayout>
 
 </LinearLayout>
