--- a/attendandroidapp/app/src/main/res/layout/login.xml
+++ b/attendandroidapp/app/src/main/res/layout/login.xml
@@ -16,13 +16,15 @@
         android:layout_height="50dp"
         android:layout_marginTop="50dp"
         android:layout_gravity="center"
-        android:hint="아이디"/>
+        android:hint="아이디"
+        android:id="@+id/id"/>
 
     <EditText
         android:layout_width="200dp"
         android:layout_height="50dp"
         android:layout_gravity="center"
-        android:hint="비밀번호"/>
+        android:hint="비밀번호"
+        android:id="@+id/passward"/>
 
     <LinearLayout
         android:layout_width="match_parent"
