--- a/attendandroidapp/app/src/main/res/layout/fragment1.xml
+++ b/attendandroidapp/app/src/main/res/layout/fragment1.xml
@@ -5,18 +5,17 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
-    <EditText
-        android:layout_width="300dp"
-        android:layout_height="50dp"
-        android:id="@+id/editbox"
-        android:hint="학생 이름 입력"/>
+        <TextView
+            android:layout_width="300dp"
+            android:layout_height="50dp"
+            android:id="@+id/text" />
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="10dp"
-        android:text="출석"
-        android:id="@+id/check_btn"/>
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:text="출석"
+            android:id="@+id/check_btn"/>
     </LinearLayout>
 <ListView
     android:layout_width="match_parent"
