--- a/attendandroidapp/app/src/main/res/layout/attend.xml
+++ b/attendandroidapp/app/src/main/res/layout/attend.xml
@@ -56,6 +56,9 @@
         android:text="출석기록 보기"
         android:id="@+id/record_btn"/>
 
-
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/text"/>
 
 </LinearLayout>
