--- a/attendandroidapp/app/src/main/res/layout/fragment1.xml
+++ b/attendandroidapp/app/src/main/res/layout/fragment1.xml
@@ -8,7 +8,7 @@
         <TextView
             android:layout_width="300dp"
             android:layout_height="50dp"
-            android:id="@+id/text" />
+            android:id="@+id/textlist1"/>
 
         <Button
             android:layout_width="wrap_content"
