--- a/attendandroidapp/app/src/main/res/layout/attend.xml
+++ b/attendandroidapp/app/src/main/res/layout/attend.xml
@@ -61,4 +61,11 @@
         android:layout_height="wrap_content"
         android:id="@+id/text"/>
 
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:text="전송"
+        android:id="@+id/send_btn"/>
+
 </LinearLayout>
