--- a/attendandroidapp/app/src/main/res/layout/fragment1.xml
+++ b/attendandroidapp/app/src/main/res/layout/fragment1.xml
@@ -5,10 +5,11 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
+
         <TextView
             android:layout_width="300dp"
-            android:layout_height="50dp"
-            android:id="@+id/text" />
+            android:layout_height="25dp"
+            android:layout_marginLeft="5dp" />
 
         <Button
             android:layout_width="wrap_content"
@@ -16,6 +17,7 @@
             android:layout_marginLeft="10dp"
             android:text="출석"
             android:id="@+id/check_btn"/>
+
     </LinearLayout>
 <ListView
     android:layout_width="match_parent"
