--- a/attendandroidapp/app/src/main/res/layout/attend.xml
+++ b/attendandroidapp/app/src/main/res/layout/attend.xml
@@ -59,7 +59,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/text"/>
+        android:id="@+id/texts"/>
 
     <Button
         android:layout_width="wrap_content"
