--- a/Android/Android_LEE/andtest/app/src/main/res/layout/activity_main.xml
+++ b/Android/Android_LEE/andtest/app/src/main/res/layout/activity_main.xml
@@ -14,10 +14,29 @@
         android:layout_weight="1"
         android:background="#000000"/>
 
-    <Button
-        android:id="@+id/btn1"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_weight="9"/>
+        android:layout_weight="9"
+        android:orientation="horizontal"
+        >
+        <Button
+            android:id="@+id/btn1"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:text = "Login"
+            />
+        <Button
+            android:id="@+id/btn2"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:text = "DB access"
+            />
+
+    </LinearLayout>
+
+
 
 </LinearLayout>
