--- a/Android/Android_LEE/andtest/app/src/main/res/layout/activity_main.xml
+++ b/Android/Android_LEE/andtest/app/src/main/res/layout/activity_main.xml
@@ -13,11 +13,22 @@
         android:layout_height="match_parent"
         android:layout_weight="1"
         android:background="#000000"/>
-
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_weight="3"
+        android:id="@+id/IDbox"
+        />
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_weight="3"
+        android:id="@+id/PWbox"
+        />
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_weight="9"
+        android:layout_weight="3"
         android:orientation="horizontal"
         >
         <Button
@@ -25,7 +36,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:text = "Login"
+            android:text = "LOGIN"
             />
         <Button
             android:id="@+id/btn2"
@@ -34,8 +45,14 @@
             android:layout_weight="1"
             android:text = "DB access"
             />
-
     </LinearLayout>
+    <Button
+        android:id="@+id/btn3"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_weight="3"
+        android:text = "UPLOAD"
+        />
 
 
 
