--- a/Android/Android_KM/projects/Ex3/app/src/main/res/layout/activity_main.xml
+++ b/Android/Android_KM/projects/Ex3/app/src/main/res/layout/activity_main.xml
@@ -10,7 +10,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="horizontal"
+        android:orientation="vertical"
         android:layout_weight="4">
 
         <LinearLayout
@@ -25,20 +25,32 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="사진 찍기"/>
+
+            <Button
+                android:id="@+id/send_photo"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="사진 보내기"/>
         </LinearLayout>
 
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_weight="1"
+            android:layout_weight="2"
             android:orientation="horizontal"
-            android:gravity="center">
-            <Button
-                android:id="@+id/send_photo"
+            >
+
+            <TextView
+                android:text="받은 메시지: "
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="사진 보내기"/>
+                android:layout_height="wrap_content"/>
+
+            <TextView
+                android:id="@+id/downText"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"/>
+
 
         </LinearLayout>
 
