--- a/Android/Android_LEE/andtest/app/src/main/res/layout/activity_main.xml
+++ b/Android/Android_LEE/andtest/app/src/main/res/layout/activity_main.xml
@@ -46,13 +46,27 @@
             android:text = "DB access"
             />
     </LinearLayout>
-    <Button
-        android:id="@+id/btn3"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_weight="3"
-        android:text = "UPLOAD"
-        />
+        android:orientation="horizontal"
+        >
+        <Button
+            android:id="@+id/btn3"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:text = "STUDENT"
+            />
+        <Button
+            android:id="@+id/btn4"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:text = "UPLOAD"
+            />
+    </LinearLayout>
 
 
 
