--- a/Android/Android_KM/projects/Ex3/app/src/main/res/layout/activity_main.xml
+++ b/Android/Android_KM/projects/Ex3/app/src/main/res/layout/activity_main.xml
@@ -20,19 +20,34 @@
             android:orientation="horizontal"
             android:gravity="center">
 
-            <Button
-                android:id="@+id/photograph"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="사진 찍기"/>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:orientation="horizontal"
+                android:gravity="center">
+                <Button
+                    android:id="@+id/photograph"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="사진 찍기"/>
 
-            <Button
-                android:id="@+id/send_photo"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="사진 보내기"/>
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:orientation="horizontal"
+                android:gravity="center">
+                <Button
+                    android:id="@+id/send_photo"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="사진 보내기"/>
+
+            </LinearLayout>
         </LinearLayout>
-
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -60,7 +75,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:layout_weight="3"
+        android:layout_weight="1"
         android:gravity="center">
 
         <ImageView
@@ -74,19 +89,40 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:layout_weight="1.8"
+        android:orientation="horizontal"
+        android:layout_weight="4"
         android:gravity="center">
 
-        <!-- 텍스트 정보를 받아 연령대 표시하는 부분 -->
-        <com.github.mikephil.charting.charts.PieChart
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:id="@+id/piechart">
+            android:layout_weight="1"
+            android:orientation="horizontal"
+            android:gravity="center">
 
-        </com.github.mikephil.charting.charts.PieChart>
+            <Button
+                android:id="@+id/chart1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="연령대 차트"
+                />
 
+        </LinearLayout>
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:orientation="horizontal"
+            android:gravity="center">
+
+            <Button
+                android:id="@+id/chart2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="선호도 차트"
+                />
+        </LinearLayout>
 
     </LinearLayout>
 
