--- a/Android/Android_KIM/Android_Function/app.New_Kone.ver2/new_Kone/app/src/main/res/layout/befor_take_photo.xml
+++ b/Android/Android_KIM/Android_Function/app.New_Kone.ver2/new_Kone/app/src/main/res/layout/befor_take_photo.xml
@@ -51,6 +51,12 @@
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:orientation="vertical">
+                        <LinearLayout
+                            android:id="@+id/state"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:orientation="horizontal"
+                            ></LinearLayout>
                     </LinearLayout>
                 </ScrollView>
             </LinearLayout>
