--- a/Android/Android_KIM/Android_Function/app.New_Kone.ver2/new_Kone/app/src/main/res/layout/take_photo.xml
+++ b/Android/Android_KIM/Android_Function/app.New_Kone.ver2/new_Kone/app/src/main/res/layout/take_photo.xml
@@ -7,12 +7,6 @@
     android:orientation="vertical"
     tools:context=".MainActivity">
 
-    <Spinner
-        android:tooltipText="과목을 선택해주세요."
-        android:id="@+id/class_choose"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_weight="0.005"/>
     <LinearLayout
         android:layout_weight="1"
         android:layout_width="match_parent"
@@ -35,13 +29,14 @@
                 android:layout_height="match_parent"
                 android:orientation="vertical"
                 android:layout_weight="30">
-            <EditText
-                android:id="@+id/select_class"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="0.1"
-                android:text="다음 과목에 대한 인증을 합니다.">
-            </EditText>
+
+             <EditText
+                 android:id="@+id/select_class"
+                 android:layout_width="match_parent"
+                 android:layout_height="wrap_content"
+                 android:layout_weight="0.1"
+                 android:text="다음 과목에 대한 인증을 합니다:">
+             </EditText>
              <!--
             <EditText
                 android:id="@+id/selected_date"
